# emberry

./: .gitattributes  .gitignore  Cargo.toml  README.md  Timeline.md  flake.nix  index.html  license.md  package-lock.json  package.json  pnpm-lock.yaml  pre-commit.sh  svelte.config.js  tsconfig.json  vite.config.js  vite.config.ts
.cargo/: config.toml
.github/: pull_request_template.md
.github/docs/: commands.md
.github/workflows/: release.yaml
keygenerator/: .gitignore  Cargo.toml
keygenerator/src/: main.rs
src/: App.svelte  app.css  index.css  index.tsx  main.ts  style.css  tauri.ts
src-tauri/: .env  .gitignore  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: embed.rs  frontend.rs  history.rs  main.rs  network.rs  window.rs
src-tauri/src/data/: cert_gen.rs  config.rs  fetch_user.rs  mod.rs  path.rs  pem_reader.rs  tauri.rs  usr_ident.rs  usr_info.rs
src-tauri/src/data/sqlite/: mod.rs  schema.rs
src-tauri/src/data/sqlite/actions/: get_or_insert.rs  mod.rs  user.rs  user_batch.rs
src-tauri/src/data/tauri/: mod.rs
src-tauri/src/frontend/: chat_msg.rs
src-tauri/src/history/: encode.rs  mod.rs  msg.rs
src-tauri/src/network/: ctrl_chnl.rs  holepunch.rs  message.rs  mod.rs  p3.rs  resolver.rs  rhizome.rs  tls_kcp.rs  user_identification.rs
src-tauri/src/network/ctrl_chnl/: certs.rs  channel.rs  messages.rs  mod.rs  requests.rs  responses.rs  room_creation.rs  state.rs
src-tauri/src/network/p2p_tunl/: mod.rs  p2p_loop.rs  pem_reader.rs  resolver.rs  signal.rs  tls_kcp.rs  vlan.rs
src-tauri/src/network/peer_tunnel/: bore.rs  mod.rs  runtime.rs  tunnel.rs
src-tauri/src/network/peer_tunnel/addons/: campfire_msg.rs  mod.rs  msg_action.rs  slash_cmd.rs
src/assets/icons/: Archive.ts
src/bridge/: _user.ts
src/comms/: msg.event.ts  msg.ts
src/comms/warehouse/: user.event.ts  user.ts
src/comps/: AddressBook.svelte  CommandCenter.svelte  Feed.svelte  Icon.svelte  Titlebar.svelte
src/core/: AppTab.ts  Drink.ts  Img.ts  PeerStatus.ts  Snack.ts  Utils.ts
src/core/cmd-center/: Archive.ts  Cmd.ts  CmdFetcher.ts
src/core/input-box/: InputBox.ts  Selection.ts  index.ts
src/core/input-box/input/: InputEventHandler.ts
src/core/input-box/renderer/: LineRenderer.ts  TextRenderer.ts
src/core/messages/: Msg.ts  Notification.ts  Packet.ts  Remoji.ts  Twemoji.ts
src/core/tiptap-ext/: bold.ts  doc.ts  p.ts  text.ts
src/core/utils/: Icons.ts  OppSys.ts  Utils.ts
src/css/: btn.css  fonts.css  vars.css
src/lib/: AddressBook.svelte  Icon.svelte  ProfileDetails.svelte  home.svelte  inputbox.css  inputbox.tsx  overlays.ts  rhizome.css  rhizome.tsx  statusbar.css  statusbar.tsx  storage.ts  user.leaf.svelte  user.me.svelte  user.status.ts  user.store.ts  user.ts  users.svelte
src/lib/chat/: Chat.svelte  Feed.svelte  Message.svelte  MessageItem.svelte  SmartList.svelte  color.ts  msg.parser.ts  msg.svelte  msg.ts
src/lib/cmd/: archive.ts  cmd.svelte  cmd.ts  cmd.type.ts
src/lib/generic/: Modal.svelte  SidePanel.svelte  _Modal.svelte
src/lib/generic/dialog/: Dialog.svelte  dialog.scss
src/lib/generic/modal/: Modal.svelte  modal.scss
src/lib/generic/modals/: RoomRequest.svelte
src/lib/icons/: bundle.16x16.ts  bundle.bry.ts  bundle.cmd.ts  bundle.ts
src/lib/inputbox/: slash.ts
src/lib/layout/: navbar.svelte  status.rhizome.svelte  statusbar.svelte
src/lib/overlays/: CommandCenter.svelte  Snackbar.svelte
src/lib/panels/: friends.css  friends.tsx  users.css  users.tsx
src/lib/pub/: Drink.svelte
src/lib/statusbar/: group.scss  group.tsx
src/lib/store/: index.ts
src/lib/tags/: rhizome.css  rhizome.tsx  updates.css  updates.tsx
src/lib/user/: index.ts  user.leaf.svelte  user.me.svelte  user.status.ts  user.store.ts  user.ts
src/lib/window/: AddressBook.svelte  Body.svelte  CommandCenter.svelte  Navbar.svelte  Snackbar.svelte  Statusbar.svelte  Titlebar.svelte  window.ts
src/pages/: Chat.svelte  Home.svelte  NewChat.svelte  content.ts  home.css  home.tsx  room.css  room.tsx  structure.ts
src/pages/content/: Chat.svelte  Home.svelte
src/pages/structure/: Body.svelte  Content.svelte  Explorer.svelte  Navbar.svelte  Pub.svelte  SidePanel.svelte  Titlebar.svelte
src/router/: Content.svelte  pages.ts
src/router/pages/: Chat.svelte  Home.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/chat/: +layout.ts
src/store/: Cache.ts  Local.ts  Session.ts  Simple.ts  index.ts
src/style/: btn.scss  button.scss  fonts.css  global.scss  img.scss  inputbox.scss  vars.scss
src/style/generics/: btn.scss  img.scss  inputbox.scss
src/tauri/: index.ts  updater.ts
src/tree/: home.css  home.tsx  room.css  room.tsx
src/types/: room.ts  user.ts
src/utils/: object.ts
(+10 files in other folders)
