[package]
name = "emberry-rs"
version = "0.1.0"
description = "emberry rust backend"
authors = ["devensiv <devensiv@gmail.com>", "max <mx.coppen@gmail.com>"]
license = "GPLv3"
repository = "https://github.com/emberry-org/emberry.git"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
smoke = { git = "https://github.com/emberry-org/smoke" }
dotenv_codegen = "0.15.0"
bs58 = "0.4"
lazy_static = "1.4.0"

tokio = { version = "1.18.2", features = ["net", "macros", "rt", "sync"] }

# kcp dependencies
tokio_kcp = "0.9.3"

# tls dependencies
tokio-rustls = "0.23"
rustls = { version = "0.20" }
rustls-pemfile = { version="0.2" }

# logging / debugging
log = "0.4"
env_logger = "0.9"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
