[package]
name = "emberry-rs"
version = "0.1.0"
description = "emberry rust backend"
authors = ["devensiv <devensiv@gmail.com>", "max <mx.coppen@gmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/emberry-org/emberry.git"
edition = "2021"
rust-version = "1.67"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tokio = { version = "1.26.0", features = ["net", "macros", "rt", "sync"] }

# tauri
tauri = { version = "1.2.4", features = ["clipboard-write-text", "notification", "updater"] }

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = "1"

# local data storage
rusqlite = { version = "0.28", features = ["bundled"] }

# utils
dotenv_codegen = "0.15.0"
once_cell = "1.16"
bs58 = "0.4"

# rhizome communication
smoke = { git = "https://github.com/emberry-org/smoke", features = [ "client" ] }

# vlink
vlink = "0.5"

# reliable udp
tokio_kcp = "0.9.3"

# tls
tokio-rustls = "0.23"
rustls = { version = "0.20" }
rustls-pemfile = { version = "0.2" }
rcgen = "0.9.3"

# http
reqwest = "0.11.12"

# logging / debugging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "fmt", "env-filter" ] }
console-subscriber = { version = "0.1", optional = true }

[dev-dependencies]
test-log = { version = "0.2", features = [ "trace" ], default-features = false }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

certgen = []
tracing = [ "dep:console-subscriber", "tokio/tracing" ]
